--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,15 +1,31 @@
 body {
     margin: 0;
     padding: 0;
+    padding-top: 70px;
     font-family: sans-serif;
-    background: linear-gradient(to right, #b92b27, #1565c0)
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background: linear-gradient(to bottom, #12AD2B, #5dd381)
 }
-
 .card{
     margin-bottom:20px;
     border:none;
 }
 
+footer{
+    background-color: #085816;
+    bottom: 0;
+}
+
+#contact{
+    border: none;
+    margin-top: 90px;
+    margin-left: 0;
+    margin-right: 0;
+    background-size: cover;
+    background-color: #085816;
+}
 .box {
     width: 500px;
     padding: 40px;
@@ -45,98 +61,6 @@ body {
     font-weight: 500
 }
 
-.box input[type="text"]:focus,
-.box input[type="password"]:focus {
-    width: 300px;
-    border-color: #2ecc71
-}
-
-.box input[type="submit"] {
-    border: 0;
-    background: none;
-    display: block;
-    margin: 20px auto;
-    text-align: center;
-    border: 2px solid #2ecc71;
-    padding: 14px 40px;
-    outline: none;
-    color: white;
-    border-radius: 24px;
-    transition: 0.25s;
-    cursor: pointer
-}
-
-.box input[type="submit"]:hover {
-    background: #2ecc71
-}
-
-.forgot {
-    text-decoration: underline
-}
-
-ul.social-network {
-    list-style: none;
-    display: inline;
-    margin-left: 0 !important;
-    padding: 0
-}
-
-ul.social-network li {
-    display: inline;
-    margin: 0 5px
-}
-
-.social-network a.icoFacebook:hover {
-    background-color: #3B5998
-}
-
-.social-network a.icoTwitter:hover {
-    background-color: #33ccff
-}
-
-.social-network a.icoGoogle:hover {
-    background-color: #BD3518
-}
-
-.social-network a.icoFacebook:hover i,
-.social-network a.icoTwitter:hover i,
-.social-network a.icoGoogle:hover i {
-    color: #fff
-}
-
-a.socialIcon:hover,
-.socialHoverClass {
-    color: #44BCDD
-}
-
-.social-circle li a {
-    display: inline-block;
-    position: relative;
-    margin: 0 auto 0 auto;
-    border-radius: 50%;
-    text-align: center;
-    width: 50px;
-    height: 50px;
-    font-size: 20px
-}
-
-.social-circle li i {
-    margin: 0;
-    line-height: 50px;
-    text-align: center
-}
-
-.social-circle li a:hover i,
-.triggeredHover {
-    transform: rotate(360deg);
-    transition: all 0.2s
-}
-
-.social-circle i {
-    color: #fff;
-    transition: all 0.8s;
-    transition: all 0.8s
-}
 .product {
     display: flex;
     flex-wrap: wrap;
@@ -163,4 +87,8 @@ a.socialIcon:hover,
 }
 .product-price {
     margin-bottom: 5px;
+}
+
+h1, h2, h3 , p {
+    font-family: sans-serif;
 }
